--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../images/me01.jpg");
+  background: url("../assets/img/portfolio/me01.JPG");
   background-size: cover;
   position: relative;
 }
