--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--gary);
 }
 /* skill---------------------------------------------------------------------- */
+#skill ul{
+  padding-left: 10px;
+}
 #skill h2{
   font-size: 48px;
   color: var(--gary);
